libos_sources += files(
	'shim_dcache.c',
	'shim_fs.c',
	'shim_fs_hash.c',
	'shim_fs_pseudo.c',
	'shim_namei.c',

	'chroot/fs.c',
	'dev/attestation.c',
	'dev/fs.c',
	'dev/null.c',
	'dev/random.c',
	'dev/std.c',
	'dev/zero.c',
	'eventfd/fs.c',
	'pipe/fs.c',
	'proc/fs.c',
	'proc/info.c',
	'proc/ipc-thread.c',
	'proc/thread.c',
	'socket/fs.c',
	'str/fs.c',
	'sys/cache_info.c',
	'sys/cpu_info.c',
	'sys/fs.c',
	'sys/node_info.c',
	'tmpfs/fs.c',
)
