libos_sources += files(
	'shim_access.c',
	'shim_alarm.c',
	'shim_brk.c',
	'shim_clone.c',
	'shim_dup.c',
	'shim_epoll.c',
	'shim_eventfd.c',
	'shim_exec.c',
	'shim_exit.c',
	'shim_fcntl.c',
	'shim_fork.c',
	'shim_fs.c',
	'shim_futex.c',
	'shim_getcwd.c',
	'shim_getpid.c',
	'shim_getrandom.c',
	'shim_getrlimit.c',
	'shim_getuid.c',
	'shim_ioctl.c',
	'shim_mmap.c',
	'shim_msgget.c',
	'shim_open.c',
	'shim_pipe.c',
	'shim_poll.c',
	'shim_sched.c',
	'shim_semget.c',
	'shim_sigaction.c',
	'shim_sleep.c',
	'shim_socket.c',
	'shim_stat.c',
	'shim_time.c',
	'shim_uname.c',
	'shim_wait.c',
	'shim_wrappers.c',
)
