pal_linux_common_sources_enclave = files(
    'bogomips.c',
)
pal_linux_common_sources_urts = files(
    'debug_map.c',
    'file_utils.c',
    'main_exec_path.c',
    'timespec_utils.c',
    'topo_info.c',
)

pal_linux_common_sources = [
    pal_linux_common_sources_enclave,
    pal_linux_common_sources_urts,
]
